<resources>
    <string name="app_name">SAMPRA</string>
    <string name="news">News</string>
    <string name="livechat">Live Chat</string>
    <string name="contact">Contact</string>
    <string name="chat">ChatScreen</string>

    <string name="title_activity_spalsh">SpalshActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="hint_msg">Message*</string>
    <string name="attach_btn">Attach File</string>
    <string name="hint_phone">Telephone Number*</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="hint_name">Name*</string>
    <string name="hint_contactNumber">Contact Number*</string>
    <string name="hint_email">Email Address*</string>
    <string name="login_btn">Submit</string>
    <string name="update_btn">UPDATE</string>
    <string name="email_btn">Email Us</string>
    <string name="apply_btn">Apply/Notify</string>
    <string name="location_desc">20 De Krote Street</string>
    <string name="location_sub_desc">Braamfontein 2001</string>
    <string name="website_link">www.sampra.org.za</string>

    <string name="profile_name">profile_name</string>
    <string name="profile_phone">profile_phone</string>
    <string name="profile_email">profile_email</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_us">Email Us</string>
    <string name="hint_chat_msg">Enter message...</string>
    <string name="enable_push">Enable Push Notifications?</string>
    <string name="in_app_msg">In-App-Messages</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="website">Sampra Website</string>
    <string name="notes">Please note the this feature will use your mobile data.</string>
    <string name="notification_content">By enabling Push Notifications, you give SAMPRA consent to sending you notifications of new messages posted on the following platform.</string>

    <string name="open_camera">OPEN CAMERA</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_gallery">This app needs access to your gallery so you can take pictures.</string>
</resources>
