<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.sampra.ui.home.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_live_chat"
        android:name="com.sampra.ui.home.livechat.LiveChatFragment"
        android:label="@string/livechat"
        tools:layout="@layout/fragment_live_chat" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.sampra.ui.home.contact.ContacatFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />
</navigation>