<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sampra.ui.home.livechat.ChatSendFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:cardCornerRadius="@dimen/_50sdp"
            android:elevation="@dimen/_5sdp"
            android:layout_margin="@dimen/_16sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/chatbot"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contactNumber" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/update_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:layout_margin="@dimen/_16sdp"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner"
            android:text="@string/login_btn"/>
    </LinearLayout>

</FrameLayout>
