<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator" >
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:layout_below="@+id/appbar"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:hint="@string/hint_phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_margin="@dimen/activity_horizontal_margin">-->

            <!--                <Spinner-->
            <!--                    android:id="@+id/spinner"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:background="@drawable/spinner_bottom_line"-->
            <!--                    android:drawablePadding="@dimen/_16sdp"-->
            <!--                    android:paddingBottom="@dimen/_10sdp" />-->

            <!--            </com.google.android.material.textfield.TextInputLayout>-->

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:layout_margin="@dimen/_10sdp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_msg" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/attach_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:background="@drawable/white_rounded_corner"
                android:text="@string/attach_btn"/>
            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:background="@drawable/rounded_corner"
                android:text="@string/login_btn"/>
            <ImageView
                android:id="@+id/imageView"
                android:visibility="gone"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</ScrollView>