<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/map"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/email_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner"
            android:text="@string/email_btn"/>
        <Button
            android:id="@+id/notify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner"
            android:text="@string/apply_btn"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:elevation="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/toggle_on" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:text="@string/location_desc"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:text="@string/location_sub_desc"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:text="@string/website_link"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:elevation="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/toggle_on"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:text="@string/location_desc"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:text="@string/location_sub_desc"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:text="@string/website_link"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

